Add ali translator